--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: datamgmt
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Data Management Utilities for Curating, Documenting, and Publishing Data
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
