--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,15 @@ Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
+Imports:
+    arcticdatautils,
+    dataone,
+    EML,
+    lubridate
+    rhandsontable,
+    shiny,
+    stringr,
+    testthat
 License: Apache License (== 2.0)
 Encoding: UTF-8
 LazyData: true
