--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Imports:
+    dataone,
     EML,
     shiny,
-    stringr,
-    testthat
+    stringr
 License: Apache License (== 2.0)
 Encoding: UTF-8
 LazyData: true
