--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(clone_package)
 export(create_attributes_table)
 export(excel_to_csv)
 export(get_numberType)
+importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
