--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Description: More about what it does (maybe more than one line)
 Depends:
     magrittr
 Imports:
+    arcticdatautils,
     crayon,
     dataone,
     datapack,
