--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_creator_id)
 export(create_attributes_table)
+export(download_packages)
 export(excel_to_csv)
 export(get_numberType)
 import(magrittr)
