--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,12 @@
 export(add_creator_id)
 export(create_attributes_table)
 export(excel_to_csv)
+export(get_awards)
 export(get_numberType)
+import(RCurl)
+import(XML)
 import(magrittr)
+import(stringr)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
