more devtools::check() bugs [ci skip]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,6 @@ import(magrittr)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
+importFrom(utils,write.csv)
