--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(download_packages)
 export(excel_to_csv)
 export(get_awards)
 export(get_numberType)
+export(qa_attributes)
+export(qa_package)
 import(RCurl)
 import(XML)
 import(magrittr)
