--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,16 @@
 
 export(add_creator_id)
 export(create_attributes_table)
+export(create_dummy_package2)
 export(download_packages)
 export(excel_to_csv)
 export(get_awards)
 export(get_numberType)
+import(EML)
 import(RCurl)
 import(XML)
+import(arcticdatautils)
+import(dataone)
 import(magrittr)
 import(stringr)
 importFrom(methods,is)
