--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,20 @@ export(create_attributes_table)
 export(download_packages)
 export(excel_to_csv)
 export(get_awards)
+export(get_custom_units)
 export(get_numberType)
 export(qa_attributes)
 export(qa_package)
 import(RCurl)
 import(XML)
+import(gsubfn)
 import(magrittr)
 import(stringr)
+import(udunits2)
+import(units)
+import(xml2)
+importFrom(compare,compare)
+importFrom(memoise,memoise)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
