Adds checking of creators and access

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,11 @@ import(EML)
 import(RCurl)
 import(XML)
 import(arcticdatautils)
+import(crayon)
 import(dataone)
 import(magrittr)
 import(stringr)
+importFrom(datapack,hasAccessRule)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
