--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_awards)
 export(get_numberType)
 export(qa_attributes)
 export(qa_package)
+export(update_package_object)
 import(EML)
 import(RCurl)
 import(XML)
