--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ import(arcticdatautils)
 import(dataone)
 import(magrittr)
 import(stringr)
+importFrom(crayon,cyan)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
