Fix import tags for Travis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,14 @@ export(get_numberType)
 export(qa_attributes)
 export(qa_package)
 import(EML)
-import(RCurl)
 import(XML)
 import(arcticdatautils)
+import(crayon)
 import(dataone)
 import(magrittr)
 import(stringr)
+importFrom(RCurl,getURL)
+importFrom(datapack,hasAccessRule)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
