Which_in_eml function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_numberType)
 export(qa_attributes)
 export(qa_package)
 export(update_package_object)
+export(which_in_eml)
 import(EML)
 import(XML)
 import(arcticdatautils)
