--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(create_attributes_table)
 export(create_dummy_package2)
 export(download_packages)
 export(excel_to_csv)
-export(get_all_attributes)
 export(get_awards)
+export(get_meta_attributes)
 export(get_numberType)
 export(qa_attributes)
 export(qa_package)
