added knitr/rmarkdown/vignette builder

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,9 @@ Imports:
 License: Apache License (== 2.0)
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
 Remotes: NCEAS/arcticdatautils
 RoxygenNote: 6.0.1
+VignetteBuilder: knitr
