--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ import(arcticdatautils)
 import(crayon)
 import(dataone)
 import(gsubfn)
-import(magrittr)
+import(shiny)
 import(stringr)
 import(udunits2)
 import(units)
@@ -26,10 +26,13 @@ import(xml2)
 importFrom(RCurl,getURL)
 importFrom(compare,compare)
 importFrom(datapack,hasAccessRule)
+importFrom(jsonlite,toJSON)
 importFrom(memoise,memoise)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
+importFrom(shinyjs,disable)
+importFrom(shinyjs,enable)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
