--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(create_dummy_package2)
 export(download_packages)
 export(excel_to_csv)
 export(get_awards)
-export(get_meta_attributes)
 export(get_custom_units)
+export(get_meta_attributes)
 export(get_numberType)
 export(qa_attributes)
 export(qa_package)
@@ -34,6 +34,7 @@ importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
+importFrom(stringi,stri_reverse)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
