--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(download_packages)
 export(excel_to_csv)
 export(get_awards)
 export(get_custom_units)
-export(get_meta_attributes)
+export(get_eml_attributes)
 export(get_numberType)
 export(qa_attributes)
 export(qa_package)
