--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ Authors@R: c(
   person("Matt", "Jones", email = "jones@nceas.ucsb.edu", role = "cre"),
   person("Dominic", "Mullen", email = "dmullen17@gmail.com", role = c("aut")),
   person("Irene", "Steves", comment = "https://github.com/isteves", role = c("aut")),
-  person("Mitchell", "Maier", email = "mitchell.maier@gmail.com", role = c("aut"))
+  person("Mitchell", "Maier", email = "mitchell.maier@gmail.com", role = c("aut")),
+  person("Emily", "O'Dean", email = "eodean10@gmail.com", role = c("aut")),
+  person("Stephanie", "Freund", email = "smfreu@gmail.com", role = c("aut"))
   )
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
