added export and some extra example info to edit_attribute documentation; Dominic removed a parentheses in guess_member_node

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_creator_id)
 export(create_attributes_table)
 export(create_dummy_package2)
 export(download_packages)
+export(edit_attribute)
 export(excel_to_csv)
 export(get_awards)
 export(get_custom_units)
