--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,14 @@
 export(add_creator_id)
 export(create_attributes_table)
 export(create_dummy_package2)
+export(download_eml_attributes)
 export(download_packages)
 export(edit_attribute)
 export(excel_to_csv)
 export(get_awards)
 export(get_custom_units)
 export(get_eml_attributes)
+export(get_eml_attributes_url)
 export(get_numberType)
 export(guess_member_node)
 export(qa_attributes)
