--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_creator_id)
 export(create_attributes_table)
 export(create_dummy_package2)
 export(download_eml_attributes)
+export(download_package)
 export(download_packages)
 export(edit_attribute)
 export(excel_to_csv)
