--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(download_packages)
 export(edit_attribute)
 export(excel_to_csv)
 export(get_awards)
+export(get_csv)
 export(get_custom_units)
+export(get_eml)
 export(get_meta_attributes)
 export(get_numberType)
 export(guess_member_node)
@@ -20,7 +22,10 @@ import(XML)
 import(arcticdatautils)
 import(crayon)
 import(dataone)
+import(getPass)
 import(gsubfn)
+import(httr)
+import(rt)
 import(shiny)
 import(stringr)
 import(udunits2)
@@ -37,6 +42,7 @@ importFrom(readxl,read_excel)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
 importFrom(stringi,stri_reverse)
+importFrom(utils,read.delim)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
