--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ import(gsubfn)
 import(shiny)
 import(stringr)
 import(udunits2)
+import(units)
 import(xml2)
 importFrom(RCurl,getURL)
 importFrom(compare,compare)
