--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,28 +17,28 @@ Depends:
     magrittr
 Imports:
     arcticdatautils,
+    compare,
     crayon,
     dataone,
     datapack,
     EML,
+    gsubfn,
+    htmlwidgets,
+    jsonlite,
+    memoise,
     methods,
     RCurl,
     readxl,
     rhandsontable,
     shiny,
+    shinyjs,
+    stringi,
     stringr,
+    udunits2,
+    units,
     utils,
     XML,
-    xml2,
-    units,
-    gsubfn,
-    udunits2,
-    compare,
-    memoise,
-    htmlwidgets,
-    jsonlite,
-    shinyjs,
-    stringi
+    xml2
 License: Apache License (== 2.0)
 Encoding: UTF-8
 LazyData: true
