removed arcticdatautils calls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,3 +40,4 @@ importFrom(stringi,stri_reverse)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
+importFrom(uuid,UUIDgenerate)
