added packages to imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,19 +20,23 @@ Imports:
     crayon,
     dataone,
     datapack,
+    dplyr,
     EML,
+    igraph,
     methods,
     RCurl,
     readxl,
     rhandsontable,
     shiny,
     stringr,
+    tidyr,
     utils,
     XML,
     xml2,
     units,
     gsubfn,
     udunits2,
+    visNetwork,
     compare,
     memoise,
     htmlwidgets,
