--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_eml_attributes)
 export(get_eml_attributes_url)
 export(get_numberType)
 export(guess_member_node)
+export(plot_pkg_structure)
 export(qa_attributes)
 export(qa_package)
 export(return_eml_units)
@@ -23,7 +24,9 @@ import(XML)
 import(arcticdatautils)
 import(crayon)
 import(dataone)
+import(dplyr)
 import(gsubfn)
+import(magrittr)
 import(shiny)
 import(stringr)
 import(udunits2)
@@ -32,15 +35,19 @@ import(xml2)
 importFrom(RCurl,getURL)
 importFrom(compare,compare)
 importFrom(datapack,hasAccessRule)
+importFrom(igraph,graph_from_data_frame)
 importFrom(jsonlite,toJSON)
 importFrom(memoise,memoise)
 importFrom(methods,is)
+importFrom(purrr,map)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
 importFrom(stringi,stri_reverse)
+importFrom(tidyr,unnest)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
 importFrom(uuid,UUIDgenerate)
+importFrom(visNetwork,visIgraph)
