--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,16 +14,16 @@ Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Depends:
-    magrittr
-Imports:
+    magrittr,
     arcticdatautils,
+    EML,
+    dataone
+Imports:
     compare,
     crayon,
-    dataone,
     datapack,
     digest,
     dplyr,
-    EML,
     gsubfn,
     htmlwidgets,
     igraph,
