travis obsolete_package.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(shinyjs,enable)
 importFrom(stringi,stri_reverse)
 importFrom(tidyr,unnest)
 importFrom(utils,setTxtProgressBar)
+importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
 importFrom(uuid,UUIDgenerate)
