--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_eml_attributes)
 export(get_eml_attributes_url)
 export(get_numberType)
 export(guess_member_node)
+export(obsolete_package)
 export(plot_pkg_structure)
 export(qa_attributes)
 export(qa_package)
