small changes to query_all_versions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(obsolete_package)
 export(plot_pkg_structure)
 export(qa_attributes)
 export(qa_package)
+export(query_all_versions)
 export(return_eml_units)
 export(update_package_object)
 export(which_in_eml)
