--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_creator_id)
 export(clone_object)
 export(clone_package)
+export(copy_package)
 export(create_attributes_table)
 export(create_dummy_package2)
 export(download_eml_attributes)
