--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(
   person("Stephanie", "Freund", email = "smfreu@gmail.com", role = c("aut")),
   person("Sharis", "Ochs", email = "sharisnochs@gmail.com", role = c("aut"))
   )
-Maintainer: The package maintainer <yourself@somewhere.net>
+Maintainer: The package maintainer <dmullen17@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Depends:
@@ -30,6 +30,7 @@ Imports:
     httr,
     jsonlite,
     memoise,
+    metadig,
     methods,
     ncdf4,
     RCurl,
@@ -56,6 +57,7 @@ Suggests: testthat,
     rmarkdown,
     visNetwork
 Remotes: NCEAS/arcticdatautils,
+         NCEAS/metadig-r,
          ropensci/EML
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
