--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(compare,compare)
 importFrom(datapack,hasAccessRule)
 importFrom(jsonlite,toJSON)
 importFrom(memoise,memoise)
+importFrom(methods,"is")
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(shinyjs,disable)
