--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ Authors@R: c(
   person("Derek", "Strong", email = "dstrong@nceas.ucsb.edu", role = c("aut"))
   )
 Maintainer: The package maintainer <dmullen17@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Data management utilities for curating, documenting, and publishing data.
 Depends:
     magrittr
 Imports:
@@ -37,6 +36,7 @@ Imports:
     RCurl,
     readxl,
     rhandsontable,
+    sf,
     shiny,
     shinyjs,
     stringi,
