--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,13 +42,19 @@ importFrom(compare,compare)
 importFrom(datapack,hasAccessRule)
 importFrom(jsonlite,toJSON)
 importFrom(memoise,memoise)
-importFrom(methods,"is")
+importFrom(methods,is)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
+importFrom(sf,read_sf)
+importFrom(sf,st_set_geometry)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
 importFrom(stringi,stri_reverse)
 importFrom(tidyr,unnest)
+importFrom(utils,download.file)
+importFrom(utils,read.csv)
+importFrom(utils,read.delim)
+importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
