Add and update QA functions
Closes #157 and #159.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(guess_member_node)
 export(obsolete_package)
 export(plot_pkg_structure)
 export(qa_attributes)
+export(qa_eml)
 export(qa_package)
 export(query_all_versions)
 export(return_eml_units)
@@ -41,6 +42,7 @@ importFrom(RCurl,getURL)
 importFrom(compare,compare)
 importFrom(datapack,hasAccessRule)
 importFrom(jsonlite,toJSON)
+importFrom(lubridate,ymd)
 importFrom(memoise,memoise)
 importFrom(methods,is)
 importFrom(readxl,excel_sheets)
@@ -50,6 +52,9 @@ importFrom(sf,st_set_geometry)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
 importFrom(stringi,stri_reverse)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_split)
+importFrom(stringr,str_subset)
 importFrom(tidyr,unnest)
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
@@ -60,3 +65,4 @@ importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
 importFrom(uuid,UUIDgenerate)
+importFrom(xml2,as_list)
