--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(excel_to_csv)
 export(get_awards)
 export(get_eml_attributes)
 export(get_eml_attributes_url)
-export(get_numberType)
 export(guess_member_node)
 export(obsolete_package)
 export(plot_pkg_structure)
@@ -30,6 +29,7 @@ import(crayon)
 import(dataone)
 import(dplyr)
 import(gsubfn)
+import(htmlwidgets)
 import(magrittr)
 import(shiny)
 import(stringr)
