--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,5 +65,6 @@ Remotes:
     NCEAS/arcticdatautils,
     NCEAS/metadig-r,
     ropensci/EML
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
