--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(jsonlite,toJSON)
 importFrom(lubridate,ymd)
 importFrom(memoise,memoise)
 importFrom(methods,is)
+importFrom(methods,slot)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(sf,read_sf)
