Refactor plot_pkg_structure()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ import(XML)
 import(arcticdatautils)
 import(crayon)
 import(dataone)
-import(dplyr)
 import(gsubfn)
 import(htmlwidgets)
 import(magrittr)
@@ -39,6 +38,13 @@ import(xml2)
 importFrom(RCurl,getURL)
 importFrom(compare,compare)
 importFrom(datapack,hasAccessRule)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
+importFrom(dplyr,funs)
+importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
 importFrom(jsonlite,toJSON)
 importFrom(lubridate,ymd)
 importFrom(memoise,memoise)
@@ -53,6 +59,7 @@ importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
 importFrom(stringi,stri_reverse)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(stringr,str_subset)
 importFrom(tidyr,unnest)
