Replace bulk of import with importFrom in docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,20 +23,17 @@ export(query_all_versions)
 export(return_eml_units)
 export(which_in_eml)
 import(EML)
-import(XML)
 import(arcticdatautils)
 import(crayon)
 import(dataone)
-import(gsubfn)
-import(htmlwidgets)
-import(magrittr)
 import(shiny)
-import(stringr)
 import(udunits2)
 import(units)
-import(xml2)
 importFrom(RCurl,getURL)
+importFrom(XML,xmlToDataFrame)
 importFrom(compare,compare)
+importFrom(crayon,green)
+importFrom(crayon,red)
 importFrom(datapack,hasAccessRule)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
@@ -45,8 +42,14 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(gsubfn,strapply)
+importFrom(htmlwidgets,JS)
+importFrom(htmlwidgets,createWidget)
+importFrom(htmlwidgets,shinyRenderWidget)
+importFrom(htmlwidgets,shinyWidgetOutput)
 importFrom(jsonlite,toJSON)
 importFrom(lubridate,ymd)
+importFrom(magrittr,"%>%")
 importFrom(memoise,memoise)
 importFrom(methods,is)
 importFrom(methods,new)
@@ -59,7 +62,9 @@ importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
 importFrom(stringi,stri_reverse)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_subset)
 importFrom(tidyr,unnest)
@@ -73,3 +78,7 @@ importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
 importFrom(uuid,UUIDgenerate)
 importFrom(xml2,as_list)
+importFrom(xml2,read_xml)
+importFrom(xml2,write_html)
+importFrom(xml2,xml_add_child)
+importFrom(xml2,xml_children)
