--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,15 +17,17 @@ export(guess_member_node)
 export(obsolete_package)
 export(plot_pkg_structure)
 export(qa_attributes)
+export(qa_congruence)
 export(qa_eml)
 export(qa_package)
+export(qa_sysmeta)
+export(qa_view)
 export(query_all_versions)
 export(return_eml_units)
 export(which_in_eml)
 import(EML)
 import(XML)
 import(arcticdatautils)
-import(crayon)
 import(dataone)
 import(dplyr)
 import(gsubfn)
@@ -40,23 +42,29 @@ importFrom(RCurl,getURL)
 importFrom(compare,compare)
 importFrom(datapack,hasAccessRule)
 importFrom(jsonlite,toJSON)
+importFrom(listviewer,jsonedit)
+importFrom(lubridate,parse_date_time)
 importFrom(lubridate,ymd)
 importFrom(memoise,memoise)
 importFrom(methods,is)
 importFrom(methods,new)
-importFrom(methods,slot)
+importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncvar_get)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(sf,read_sf)
 importFrom(sf,st_set_geometry)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
+importFrom(stats,na.omit)
 importFrom(stringi,stri_reverse)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract_all)
 importFrom(stringr,str_split)
-importFrom(stringr,str_subset)
 importFrom(tidyr,unnest)
+importFrom(utils,capture.output)
 importFrom(utils,download.file)
+importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,read.table)
