Add QA helper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(lubridate,ymd)
 importFrom(memoise,memoise)
 importFrom(methods,is)
 importFrom(methods,new)
+importFrom(methods,slot)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
 importFrom(readxl,excel_sheets)
@@ -60,6 +61,8 @@ importFrom(stats,na.omit)
 importFrom(stringi,stri_reverse)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract_all)
+importFrom(stringr,str_replace)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(tidyr,unnest)
 importFrom(utils,capture.output)
