--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(plot_pkg_structure)
 export(qa_attributes)
 export(qa_eml)
 export(qa_package)
+export(qa_sysmeta)
+export(qa_view)
 export(query_all_versions)
 export(return_eml_units)
 export(which_in_eml)
@@ -48,6 +50,7 @@ importFrom(htmlwidgets,createWidget)
 importFrom(htmlwidgets,shinyRenderWidget)
 importFrom(htmlwidgets,shinyWidgetOutput)
 importFrom(jsonlite,toJSON)
+importFrom(listviewer,jsonedit)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(memoise,memoise)
@@ -66,7 +69,6 @@ importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
-importFrom(stringr,str_subset)
 importFrom(tidyr,unnest)
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
