--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,6 @@ export(return_eml_units)
 export(which_in_eml)
 import(EML)
 import(arcticdatautils)
-import(crayon)
 import(dataone)
 import(shiny)
 import(udunits2)
@@ -36,6 +35,7 @@ importFrom(XML,xmlToDataFrame)
 importFrom(compare,compare)
 importFrom(crayon,green)
 importFrom(crayon,red)
+importFrom(crayon,yellow)
 importFrom(datapack,hasAccessRule)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
@@ -51,18 +51,22 @@ importFrom(htmlwidgets,shinyRenderWidget)
 importFrom(htmlwidgets,shinyWidgetOutput)
 importFrom(jsonlite,toJSON)
 importFrom(listviewer,jsonedit)
+importFrom(lubridate,parse_date_time)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(memoise,memoise)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,slot)
+importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncvar_get)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(sf,read_sf)
 importFrom(sf,st_set_geometry)
 importFrom(shinyjs,disable)
 importFrom(shinyjs,enable)
+importFrom(stats,na.omit)
 importFrom(stringi,stri_reverse)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract_all)
@@ -70,7 +74,9 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(tidyr,unnest)
+importFrom(utils,capture.output)
 importFrom(utils,download.file)
+importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,read.table)
