--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ sudo: required
 dist: trusty
 cache: packages
 addons:
-   apt:
+  apt:
     sources:
       - sourceline: 'ppa:ubuntugis/ppa' # for sf
     packages:
-      - librdf0-dev
-      - libnetcdf-dev
-      - r-cran-ncdf4
-      - libudunits2-dev
+      - librdf0-dev # for datapack
+      - libnetcdf-dev # for ncdf4
+      - netcdf-bin # for ncdf4
+      - libudunits2-dev # for udunits2
       - libgeos-dev # for sf
       - libproj-dev # for sf
       - libgdal-dev # for sf
