--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,4 @@ addons:
       - libproj-dev # for sf
       - libgdal-dev # for sf
       - libjq-dev # dependency of jqr (json parser), dependency of EML
+      - libv8-dev
