--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Imports:
     datapack,
     digest,
     dplyr,
-    EML,
+    EML (>= 2.0),
     gsubfn,
     htmlwidgets,
     httr,
@@ -60,8 +60,7 @@ Suggests:
     rmarkdown,
     visNetwork
 Remotes:
-    NCEAS/arcticdatautils,
-    ropensci/EML@1b3d0a2bd63e01a3af99c77aa6a0784c3da3ea06
+    NCEAS/arcticdatautils
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
