--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(clone_object)
 export(clone_package)
 export(copy_package)
+export(download_all_files)
 export(download_eml_attributes)
 export(download_package)
 export(download_packages)
