--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Imports:
     utils,
     uuid,
     XML,
-    xml2
+    xml2,
+    googlesheets4
 Suggests:
     testthat,
     knitr,
@@ -55,5 +56,5 @@ Suggests:
 Remotes:
     NCEAS/arcticdatautils
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 VignetteBuilder: knitr
