--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_awards)
 export(get_eml_attributes)
 export(get_eml_attributes_url)
 export(guess_member_node)
+export(new_catagory)
 export(obsolete_package)
 export(plot_pkg_structure)
 export(qa_attributes)
