--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Suggests:
     igraph,
     purrr,
     rmarkdown,
-    visNetwork
+    visNetwork,
+    sodium
 Remotes:
     NCEAS/arcticdatautils
 Roxygen: list(markdown = TRUE)
