Revert "Remove sources and enable tests on travis"

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-dist: bionic
+
 language: r
 r:
   - oldrel
@@ -7,7 +7,11 @@ sudo: required
 cache: packages
 addons:
   apt:
+    sources:
+      - sourceline: 'ppa:ubuntugis/ppa' # for sf
+      - sourceline: 'ppa:chris-lea/libsodium' # for tokens
     packages:
+      - libsodium-dev # for tokens
       - librdf0-dev # for datapack
       - libnetcdf-dev # for ncdf4
       - netcdf-bin # for ncdf4
